# ruisdael-elk-server

./: .elk-server-ci.yml  .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  build.gradle  main.py  pyproject.toml  settings.gradle  simple_test.py
Ansibles/: application.config.j2  dashbaord.service.j2  dashboard.conf  dashboard.service.j2  elastic_server_playbook.yaml  elasticsearch.yml  elasticsearch.yml.j2  kibana.conf.j2  kibana.yml.j2  kibana_server_playbook.yaml  template_server_inventory.yaml
Ansibles/FilesElasticSearch/: http.p12  http_ca.crt  service_token  transport.p12
Ansibles/my_fs_backup_location/: index-6
config/: checkstyle.xml  pmd-exclusions.xml
docs/: Sprint_Retrospective_Report_1.md
docs/Agendas/: Agenda-Week-4.md  Client-Meeting-Notes-Week10.md  Client-Meeting-Notes-Week4.md  Client-Meeting-Notes-Week8.md  Client-Meeting-Week8.md  Group-Meeting-Notes-30.05.md  TA-Meeting-Week8.md  TA-Meeting-notes-Week8.md  TW-Meeting-Notes-Week9.md  Week5-TA-Meeting-Notes.md
docs/Meeting_Notes/: Group-Meeting-Notes-30.05.md  Meeting_Notes_with_the_TA_2023_04_25.txt  Notes_TA_09-06-23.txt  Notes_client_meeting_2023-05-15.md  Notes_meeting_TA_12-5.txt  Notes_meeting_TA_2023-06-02.md  TA-Meeting-Notes-Week9.md  TA_meeting_2023-05-17.md
src/main/resources/: application.properties  data.sql
src/main/resources/static/css/: device-list.css  index.css  login.css  navbar.css  (+4 more)
src/main/resources/templates/: account-management.html  alerts.html  device-list.html  index.html  login.html  navbar.html  node.html  overview.html  pagination.html  settings.html
(+223 files in other folders)
